# Koro_NavTool

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.6a2ce9c  run_in_Qt.txt
.github/workflows/: arrch64.yml  ubuntu-arm.yml  ubuntu.yml
FluentUI/: fluentui_en_US.ts  fluentui_zh_CN.ts
app/: CMakeLists.txt
app/CUI/: CMakeLists.txt
app/CUI/rtklib_rnx2rtkp/: CMakeLists.txt  rnx2rtkp.c  rnx2rtkp_win.cpp
app/CUI/rtklib_rtkrcv/: CMakeLists.txt  main.c
app/CUI/rtklib_str2str/: CMakeLists.txt  str2str.c
app/CUI/str_mult/: CMakeLists.txt  main.c
app/CUI/svr_core/: CMakeLists.txt  main.cpp
app/CUI/template/: CMakeLists.txt  main.cpp
app/GUI/: CMakeLists.txt
app/GUI/Tools_GUI/: CMakeLists.txt  mainwindow.ui
app/OSC/: CMakeLists.txt
app/OSC/KF-GINS/: CMakeLists.txt
app/OSC/KF-GINS/src/: kf_gins.cpp
app/OSC/OB_GINS/: CMakeLists.txt
doc/算法验证/: RTK.xlsx  arrch64.yml
rely/SocketTest/: SocketTest.ini
src/: CMakeLists.txt  Koro_NavTool_en_US.ts  Koro_NavTool_zh_CN.ts  NavTool_en_US.ts  NavTool_zh_CN.ts  icon.rc  main.cpp  qml.qrc
src/cpp/component/: CircularReveal.h  FileWatcher.h  FpsItem.h
src/cpp/helper/: InitializrHelper.h  Network.h  SettingsHelper.h  TranslateHelper.h
src/module/caster_gui/: DashboardPage.qml
src/module/str_mult/: MainPage.qml  ModulePage.qml  OptionPage.qml  StreamPage.qml  strmultPage.qml
src/qml/: App.qml
src/qml/global/: GlobalModel.qml  GlobalSetting.qml  ItemsFooter.qml  ItemsOriginal.qml  qmldir
src/qml/page/: T_Home.qml  T_Settings.qml
src/qml/window/: MainWindow.qml
third/: CMakeLists.txt
third/eigen-3.4.0/: eigen-3.4.0.pro
third/rtklib/: CMakeLists.txt
